Se movio la carpeta images a la carpeta vista

--- a/Vista/afiliado.html
+++ b/Vista/afiliado.html
@@ -47,7 +47,7 @@
 
     <div class="contenedor">
 
-        <img src="camion.png">
+        <img src="images/camion.png">
 
         <p>
         <h3> actualiza tu ubicacion</h3>
